--- a/services/qa/package.json
+++ b/services/qa/package.json
@@ -28,7 +28,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.2",
+    "mongoose-auto-increment": "^5.0.1",
+    "mongoose-sequence": "^5.2.2",
     "morgan": "^1.9.1",
-    "sequelize": "^5.21.4"
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.5"
   }
 }
