--- a/services/qa/package.json
+++ b/services/qa/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node start.js",
     "dev": "nodemon start.js",
-    "test": "test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,10 +18,18 @@
     "url": "https://github.com/iguaza-sdc/questions-and-answers/issues"
   },
   "homepage": "https://github.com/iguaza-sdc/questions-and-answers#readme",
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@babel/register": "^7.8.3"
+    "@babel/register": "^7.8.3",
+    "jest": "^25.1.0",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
