--- a/services/qa/package.json
+++ b/services/qa/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node start.js",
-    "dev": "nodemon start.js",
+    "dev": "node start.js",
     "test": "jest"
   },
   "repository": {
