--- a/services/qa/package.json
+++ b/services/qa/package.json
@@ -41,6 +41,7 @@
     "morgan": "^1.9.1",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
+    "pg-promise": "^10.4.4",
     "sequelize": "^5.21.5"
   }
 }
