--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - NODE_ENV=development
       - PORT=5000
       - DATABASE_URL=postgres://sdcpostgres:sdcpostgres@qa-db:5432/qa_dev
-      - DATABASE_TEST_URL=postgres://sdcpostgres:sdcpostgres@qa-db/qa_test
+      - DATABASE_TEST_URL=postgres://sdcpostgres:sdcpostgres@qa-db:5432/qa_test
     depends_on:
       - qa-db
 
