--- a/services/client/conf/conf.d/default.conf
+++ b/services/client/conf/conf.d/default.conf
@@ -4,13 +4,12 @@ server {
 
   location / {
     root /usr/share/nginx/html;
-    index index.html index.htm;
+    index index.html index.html;
     try_files $uri $uri /index.html;
-  }
-
-  error_page 500 502 504 504 /50x.html;
-  location = /50x.html {
-    root /usr/share/nginx/html;
+  
+    location = /50x.html {
+      root /usr/share/nginx/html;
+    }
   }
 
 }
