--- a/services/client/Dockerfile-prod
+++ b/services/client/Dockerfile-prod
@@ -8,7 +8,7 @@ COPY package.json /usr/src/app/package.json
 COPY package-lock.json /usr/src/app/package-lock.json
 
 RUN npm install
-RUN npm install react-scripts@latest --global --silent
+RUN npm install react-scripts@latest --global --slient
 
 ARG REACT_APP_API_URL
 ENV REACT_APP_API_URL $REACT_APP_API_URL
@@ -17,5 +17,15 @@ ARG NODE_ENV
 ENV NODE_ENV $NODE_ENV
 
 COPY . /usr/src/app
+RUN npm run build
 
-CMD ["npm", "start"]
+FROM nginx:1.17.8
+
+RUN rm -rf /etc/nginx/conf.d
+COPY conf /etc/nginx
+
+COPY --from=builder /usr/src/app/build /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
