--- a/services/client/package.json
+++ b/services/client/package.json
@@ -17,7 +17,9 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2"
   },
-  "optionalDependencies": {},
+  "optionalDependencies": {
+    "fsevents": "^2.1.2"
+  },
   "scripts": {
     "test": "",
     "start": "react-scripts start",
